--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arima&family=Edu+VIC+WA+NT+Beginner:wght@500&family=Lobster&family=Poppins:ital,wght@0,500;1,300&family=Source+Sans+Pro:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9ee9dbc796.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Live-Football-Website</title>
