--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -260,6 +260,18 @@
                         <small>Goal Live</small>
                     </div>
                 </div>
+
+                <div class="icons">
+                    <div class="facebook-icon">
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+                    <div class="facebook-icon">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </div>
+                    <div class="facebook-icon">
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
             </footer>
         </section>
 
